--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,12 +3,12 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="people-outline"></ion-icon>
-      <ion-label>Students</ion-label>
+      <ion-label>Events</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="calendar-outline"></ion-icon>
-      <ion-label>Appointments</ion-label>
+      <ion-label>To-Dos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
