--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,45 +1,25 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Appointments
+      To-Dos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    <ion-calendar [(ngModel)]="date"
-      (change)="onChange($event)"
-      [type]="type"
-      [format]="'YYYY-MM-DD'">
-  </ion-calendar>
-  </div>
-  <div class="appt-table">
-    <table>
-      <tr>
-        <th class="appt-data">
-          Date
-        </th>
-        <th class="appt-data">
-          Time
-        </th>
-        <th class="appt-data">
-          Name
-        </th>
-      </tr>
-      <tr *ngFor="let appt of appts; let i = index">
-        <td class="appt-data">
-          {{appt.date}}
-        </td>
-        <td class="appt-data">
-          {{appt.time}}
-        </td>
-        <td class="appt-data">
-          {{appt.name}}
-        </td>
-      </tr>
-    </table>
-  </div>
+  <ion-item-sliding>
+    <ion-item>
+      <ion-label>
+        <h2>Test</h2>
+      </ion-label>
+    </ion-item>
+    <ion-item-options>
+      <button>
+        <ion-icon name="checkmark"></ion-icon>
+        Complete
+      </button>
+    </ion-item-options>
+  </ion-item-sliding>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="addAppt()">
