--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,10 +11,10 @@
       <ion-label>To-Dos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <!-- <ion-tab-button tab="tab3">
       <ion-icon name="bookmarks-outline"></ion-icon>
       <ion-label>Content</ion-label>
-    </ion-tab-button>
+    </ion-tab-button> -->
   </ion-tab-bar>
 
 </ion-tabs>
