--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,14 +7,14 @@
 </ion-header>
 
 <ion-content>
-  <ion-item-sliding>
+  <ion-item-sliding *ngFor="let todo of todos; let i = index">
     <ion-item>
       <ion-label>
-        <h2>Test</h2>
+        <h2>{{todo.descr}}</h2>
       </ion-label>
     </ion-item>
     <ion-item-options>
-      <button>
+      <button (click)="removeTodo(todo)">
         <ion-icon name="checkmark"></ion-icon>
         Complete
       </button>
@@ -22,7 +22,7 @@
   </ion-item-sliding>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="addAppt()">
+    <ion-fab-button (click)="addTodo()">
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
